--- a/index.html
+++ b/index.html
@@ -1012,7 +1012,7 @@ f(n) = 2^{C_n^2 } - \sum_{i=1}^{n-1} C_{n-1}^{i-1} f(i) 2^{C_{n-i}^2 }</script><
         <a href="https://github.com/zhongyuwei" title="GitHub → https:&#x2F;&#x2F;github.com&#x2F;zhongyuwei" rel="noopener" target="_blank"><i class="fa fa-fw fa-github"></i>GitHub</a>
       </span>
       <span class="links-of-author-item">
-        <a href="mailto:rose.zyw@qq.com" title="E-Mail → mailto:rose.zyw@qq.com" rel="noopener" target="_blank"><i class="fa fa-fw fa-envelope"></i>E-Mail</a>
+        <a href="mailto:2786211836@qq.com" title="E-Mail → mailto:2786211836@qq.com" rel="noopener" target="_blank"><i class="fa fa-fw fa-envelope"></i>E-Mail</a>
       </span>
   </div>
 
